Improve test coverage

--- a/analysis/benchmark_ga.ipynb
+++ b/analysis/benchmark_ga.ipynb
@@ -2,117 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "52514ece",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "local\n",
-      "WARNING: CUDA MPS not active\n",
-      "init CUDA\n",
-      "Detected GPU compute capability: 8.9 (arch=sm_89)\n",
-      "GPU max threads per block: 1024\n",
-      "=== Compiling kernel variant: crystal ===\n",
-      "Defines: ENABLE_CRYSTAL_AXES, ENABLE_OVERLAP_AREA, ENABLE_SEPARATION\n",
-      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math --extra-device-vectorization --ptxas-options=-v,--warn-on-spills -arch=sm_89 -DENABLE_CRYSTAL_AXES -DENABLE_OVERLAP_AREA -DENABLE_SEPARATION -cubin /mnt/d//packing/temp/pack_cuda_saved.cu -o /mnt/d//packing/temp/pack_cuda_crystal.cubin\n",
-      "ptxas info    : 0 bytes gmem, 1172 bytes cmem[3]\n",
-      "ptxas info    : Compiling entry function 'multi_boundary_distance_list_total' for 'sm_89'\n",
-      "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
-      "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 36 registers, used 1 barriers, 404 bytes cmem[0], 16 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 20.635 ms\n",
-      "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
-      "ptxas info    : Function properties for multi_boundary_list_total\n",
-      "    240 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 43 registers, used 1 barriers, 240 bytes cumulative stack size, 404 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 445.176 ms\n",
-      "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
-      "ptxas info    : Function properties for multi_overlap_list_total\n",
-      "    1264 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 80 registers, used 1 barriers, 1264 bytes cumulative stack size, 424 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 377.370 ms\n",
-      "\n",
-      "\n",
-      "--- Kernel: multi_overlap_list_total [crystal] ---\n",
-      "  Max threads per block (kernel): 768\n",
-      "  Num registers: 80\n",
-      "  Shared memory (bytes): 0\n",
-      "  Const memory (bytes): 1172\n",
-      "  Local memory (bytes): 1264\n",
-      "=== Compiling kernel variant: no_sep ===\n",
-      "Defines: ENABLE_OVERLAP_AREA\n",
-      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math --extra-device-vectorization --ptxas-options=-v,--warn-on-spills -arch=sm_89 -DENABLE_OVERLAP_AREA -cubin /mnt/d//packing/temp/pack_cuda_saved.cu -o /mnt/d//packing/temp/pack_cuda_no_sep.cubin\n",
-      "ptxas info    : 0 bytes gmem, 1172 bytes cmem[3]\n",
-      "ptxas info    : Compiling entry function 'multi_boundary_distance_list_total' for 'sm_89'\n",
-      "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
-      "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 36 registers, used 1 barriers, 404 bytes cmem[0], 16 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 8.742 ms\n",
-      "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
-      "ptxas info    : Function properties for multi_boundary_list_total\n",
-      "    240 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 43 registers, used 1 barriers, 240 bytes cumulative stack size, 404 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 452.126 ms\n",
-      "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
-      "ptxas info    : Function properties for multi_overlap_list_total\n",
-      "    1232 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 64 registers, used 1 barriers, 1232 bytes cumulative stack size, 424 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 77.697 ms\n",
-      "\n",
-      "\n",
-      "--- Kernel: multi_overlap_list_total [no_sep] ---\n",
-      "  Max threads per block (kernel): 1024\n",
-      "  Num registers: 64\n",
-      "  Shared memory (bytes): 0\n",
-      "  Const memory (bytes): 1172\n",
-      "  Local memory (bytes): 1232\n",
-      "=== Compiling kernel variant: sep ===\n",
-      "Defines: ENABLE_SEPARATION\n",
-      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math --extra-device-vectorization --ptxas-options=-v,--warn-on-spills -arch=sm_89 -DENABLE_SEPARATION -cubin /mnt/d//packing/temp/pack_cuda_saved.cu -o /mnt/d//packing/temp/pack_cuda_sep.cubin\n",
-      "ptxas info    : 0 bytes gmem, 1172 bytes cmem[3]\n",
-      "ptxas info    : Compiling entry function 'multi_boundary_distance_list_total' for 'sm_89'\n",
-      "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
-      "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 36 registers, used 1 barriers, 404 bytes cmem[0], 16 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 9.069 ms\n",
-      "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
-      "ptxas info    : Function properties for multi_boundary_list_total\n",
-      "    240 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 43 registers, used 1 barriers, 240 bytes cumulative stack size, 404 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 433.917 ms\n",
-      "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
-      "ptxas info    : Function properties for multi_overlap_list_total\n",
-      "    144 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 56 registers, used 1 barriers, 144 bytes cumulative stack size, 424 bytes cmem[0], 40 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 78.444 ms\n",
-      "\n",
-      "\n",
-      "--- Kernel: multi_overlap_list_total [sep] ---\n",
-      "  Max threads per block (kernel): 1024\n",
-      "  Num registers: 56\n",
-      "  Shared memory (bytes): 0\n",
-      "  Const memory (bytes): 1172\n",
-      "  Local memory (bytes): 144\n",
-      "\n",
-      "--- Kernel: multi_boundary_list_total ---\n",
-      "  Max threads per block (kernel): 1024\n",
-      "  Num registers: 43\n",
-      "  Shared memory (bytes): 0\n",
-      "  Const memory (bytes): 1172\n",
-      "  Local memory (bytes): 240\n",
-      "\n",
-      "--- Kernel: multi_boundary_distance_list_total ---\n",
-      "  Max threads per block (kernel): 1024\n",
-      "  Num registers: 36\n",
-      "  Shared memory (bytes): 0\n",
-      "  Const memory (bytes): 1172\n",
-      "  Local memory (bytes): 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "import os\n",
@@ -134,98 +27,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "d7534394",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Compiling CUDA LUT kernel one-time only)\n",
-      "Detected GPU compute capability: 89 (arch=sm_89)\n",
-      "Compiling: /usr/local/cuda/bin/nvcc -O3 -use_fast_math --extra-device-vectorization --ptxas-options=-v,--warn-on-spills -lineinfo -arch=sm_89 -cubin /mnt/d//packing/temp/pack_cuda_lut_saved.cu -o /mnt/d//packing/temp/pack_cuda_lut.cubin\n",
-      "/mnt/d//packing/temp/pack_cuda_lut_saved.cu:5: warning: \"M_PI\" redefined\n",
-      "    5 | #define M_PI 3.14159265358979323846f\n",
-      "      | \n",
-      "In file included from /usr/include/c++/13/cmath:47,\n",
-      "                 from /usr/include/c++/13/math.h:36,\n",
-      "                 from /usr/local/cuda/bin/../targets/x86_64-linux/include/crt/math_functions.h:4577,\n",
-      "                 from /usr/local/cuda/bin/../targets/x86_64-linux/include/crt/common_functions.h:303,\n",
-      "                 from /usr/local/cuda/bin/../targets/x86_64-linux/include/cuda_runtime.h:117,\n",
-      "                 from <command-line>:\n",
-      "/usr/include/math.h:1152: note: this is the location of the previous definition\n",
-      " 1152 | # define M_PI           3.14159265358979323846  /* pi */\n",
-      "      | \n",
-      "ptxas info    : 16 bytes gmem, 64 bytes cmem[3], 16 bytes cmem[4]\n",
-      "ptxas info    : Compiling entry function 'multi_overlap_lut_total' for 'sm_89'\n",
-      "ptxas info    : Function properties for multi_overlap_lut_total\n",
-      "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 48 registers, used 1 barriers, 408 bytes cmem[0]\n",
-      "ptxas info    : Compile time = 12.070 ms\n",
-      "\n",
-      "Kernel multi_overlap_lut_total:\n",
-      "  Registers: 48\n",
-      "  Shared mem: 0 bytes\n",
-      "  Max threads/block: 1024\n",
-      "init LAP CUDA\n",
-      "Detected GPU compute capability: 8.9 (arch=sm_89)\n",
-      "GPU max threads per block: 1024\n",
-      "=== Compiling LAP kernels ===\n",
-      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math --extra-device-vectorization --ptxas-options=-v,--warn-on-spills -arch=sm_89 -cubin /mnt/d//packing/temp/lap_batch_saved.cu -o /mnt/d//packing/temp/lap_batch.cubin\n",
-      "ptxas info    : 0 bytes gmem\n",
-      "ptxas info    : Compiling entry function 'diversity_shortcut_kernel' for 'sm_89'\n",
-      "ptxas info    : Function properties for diversity_shortcut_kernel\n",
-      "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 29 registers, used 1 barriers, 400 bytes cmem[0]\n",
-      "ptxas info    : Compile time = 10.007 ms\n",
-      "ptxas info    : Compiling entry function 'compute_costs' for 'sm_89'\n",
-      "ptxas info    : Function properties for compute_costs\n",
-      "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 29 registers, used 0 barriers, 384 bytes cmem[0]\n",
-      "ptxas info    : Compile time = 3.356 ms\n",
-      "ptxas info    : Compiling entry function 'auction_kernel' for 'sm_89'\n",
-      "ptxas info    : Function properties for auction_kernel\n",
-      "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 35 registers, used 0 barriers, 412 bytes cmem[0]\n",
-      "ptxas info    : Compile time = 7.298 ms\n",
-      "ptxas info    : Compiling entry function 'hungarian_kernel' for 'sm_89'\n",
-      "ptxas info    : Function properties for hungarian_kernel\n",
-      "    1808 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 40 registers, used 0 barriers, 1808 bytes cumulative stack size, 408 bytes cmem[0]\n",
-      "ptxas info    : Compile time = 16.534 ms\n",
-      "\n",
-      "\n",
-      "--- Kernel: hungarian_kernel ---\n",
-      "  Max threads per block (kernel): 1024\n",
-      "  Num registers: 40\n",
-      "  Shared memory (bytes): 0\n",
-      "  Const memory (bytes): 0\n",
-      "  Local memory (bytes): 1808\n",
-      "\n",
-      "--- Kernel: auction_kernel ---\n",
-      "  Max threads per block (kernel): 1024\n",
-      "  Num registers: 35\n",
-      "  Shared memory (bytes): 0\n",
-      "  Const memory (bytes): 0\n",
-      "  Local memory (bytes): 0\n",
-      "\n",
-      "--- Kernel: compute_costs ---\n",
-      "  Max threads per block (kernel): 1024\n",
-      "  Num registers: 29\n",
-      "  Shared memory (bytes): 0\n",
-      "  Const memory (bytes): 0\n",
-      "  Local memory (bytes): 0\n",
-      "\n",
-      "--- Kernel: diversity_shortcut_kernel ---\n",
-      "  Max threads per block (kernel): 1024\n",
-      "  Num registers: 29\n",
-      "  Shared memory (bytes): 0\n",
-      "  Const memory (bytes): 0\n",
-      "  Local memory (bytes): 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from IPython.display import HTML, display, clear_output\n",
     "kgs.set_float32(True)\n",
@@ -238,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "6c85f2e3",
    "metadata": {},
    "outputs": [],
@@ -251,21 +56,13 @@
    "execution_count": null,
    "id": "d7b03f53",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pack_cost.CollisionCostExactSeparation'>\n",
-      "Loading cached lookup table from /mnt/d//packing/temp//lut_cache/exact_sep_Nx900_Ny900_Nt900_trimTrue_tree42d0f17d.lut_cache...\n",
-      "Successfully loaded cached lookup table\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "import pack_ga3\n",
     "import time\n",
+    "import pack_move\n",
+    "#kgs.enable_module_profiling(pack_move)\n",
     "runner = pack_ga3.baseline_symmetry_180_tesselated(adapt_moves=True)\n",
     "runner.ga.ga_base.initializer.ref_sol_axis2_offset = lambda r:0.5\n",
     "runner.ga.do_legalize = False\n",
@@ -284,18 +81,7 @@
    "execution_count": null,
    "id": "ffaa8825",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/mnt/d/packing/code/analysis/../core/pack_dynamics.py:61: VisibleDeprecationWarning: This function is deprecated and will be removed in a future release. Use the cupy.from_dlpack() array constructor instead.\n",
-      "  x0 = from_dlpack(x0.toDlpack())\n",
-      "/mnt/d/packing/code/analysis/../core/pack_dynamics.py:93: VisibleDeprecationWarning: This function is deprecated and will be removed in a future release. Use the cupy.from_dlpack() array constructor instead.\n",
-      "  return from_dlpack(tmp_cost[:N].toDlpack()), from_dlpack(res.toDlpack())\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%pyinstrument\n",
     "kgs.profiling=True\n",
