--- a/analysis/analyze_repro.ipynb
+++ b/analysis/analyze_repro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "a927a9d6-cad3-401d-8b9f-6493a2c0848f",
    "metadata": {
     "tags": []
@@ -24,7 +24,7 @@
        "<module 'kaggle_support' from '/mnt/d/packing/code/analysis/../core/kaggle_support.py'>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "0b650d7d",
    "metadata": {},
    "outputs": [
@@ -72,17 +72,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "60c53ca3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7372a0d0c690>]"
+       "[<matplotlib.lines.Line2D at 0x778fb062e5d0>]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "5ccb3e20",
    "metadata": {},
    "outputs": [
