--- a/analysis/runs/controller.ipynb
+++ b/analysis/runs/controller.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "37e6e637",
    "metadata": {},
    "outputs": [
@@ -54,7 +54,7 @@
     "DO_CHECK = False\n",
     "\n",
     "# User inputs\n",
-    "N_TREES_LIST = [60]+[156]+[x.item() for x in np.arange(60,81,2)] + [110,156,182,200]\n",
+    "N_TREES_LIST = np.arange(92,200,2)\n",
     "N_PROCESSES = 2 if kgs.env=='local' else 1  # Maximum concurrent processes\n",
     "DIAGNOSTIC_INTERVAL = 120  # Seconds between diagnostic updates\n",
     "SEED_LIST = [112,113]  # Base seed for reproducibility\n",
@@ -644,7 +644,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python3 (ipykernel)",
+   "display_name": "rapids-25.10",
    "language": "python",
    "name": "python3"
   },
@@ -658,7 +658,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.12"
+   "version": "3.13.10"
   }
  },
  "nbformat": 4,
