Prep asymmetric run

--- a/analysis/analyze_repro.ipynb
+++ b/analysis/analyze_repro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "a927a9d6-cad3-401d-8b9f-6493a2c0848f",
    "metadata": {
     "tags": []
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "0b650d7d",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,7 @@
     }
    ],
    "source": [
-    "N_trees = 77\n",
+    "N_trees = 155\n",
     "import numpy as np\n",
     "import glob\n",
     "files = glob.glob(kgs.temp_dir + f'/controller_runs/repro/ga_N{N_trees}_*.pickle')\n",
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "60c53ca3",
    "metadata": {},
    "outputs": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "5ccb3e20",
    "metadata": {},
    "outputs": [
@@ -146,13 +146,13 @@
     "# make each trace monotonically decreasing (by taking the minimum value so far)\n",
     "traces_corrected = [np.minimum.accumulate(trace) for trace in traces_corrected]\n",
     "for t in traces_corrected:\n",
-    "    plt.plot(t)\n",
+    "    plt.plot(t[:200])\n",
     "plt.grid(True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "48588491",
    "metadata": {},
    "outputs": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "7be26972",
    "metadata": {},
    "outputs": [
