Redo standardized crystal

--- a/analysis/standardize_crystal_solutions.ipynb
+++ b/analysis/standardize_crystal_solutions.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "634a9b80",
    "metadata": {},
    "outputs": [
@@ -292,7 +292,15 @@
       "/mnt/d//packing/temp/controller_runs/done/ga_N74_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N75_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N76_seed87_done.pickle skipped\n",
-      "/mnt/d//packing/temp/controller_runs/done/ga_N76_seed88_done.pickle skipped\n"
+      "/mnt/d//packing/temp/controller_runs/done/ga_N76_seed88_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N83_seed130_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N85_seed130_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N87_seed130_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N89_seed130_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N91_seed130_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N93_seed130_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N95_seed130_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N97_seed130_done.pickle skipped\n"
      ]
     }
    ],
@@ -324,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "17b84dca",
    "metadata": {},
    "outputs": [
@@ -487,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "9e7af746",
    "metadata": {},
    "outputs": [],
