New solution and more diagnostics

--- a/analysis/standardize_crystal_solutions.ipynb
+++ b/analysis/standardize_crystal_solutions.ipynb
@@ -2,21 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "a927a9d6-cad3-401d-8b9f-6493a2c0848f",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "local\n",
-      "WARNING: CUDA MPS not active\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#%matplotlib widget\n",
     "import sys\n",
@@ -36,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "634a9b80",
    "metadata": {},
    "outputs": [
@@ -97,6 +88,7 @@
       "/mnt/d//packing/temp/controller_runs/done/ga_N20_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N20_seed88_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N20_seed89_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N21_seed130_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N21_seed84_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N21_seed86_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N21_seed87_done.pickle skipped\n",
@@ -104,6 +96,7 @@
       "/mnt/d//packing/temp/controller_runs/done/ga_N22_seed86_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N22_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N22_seed89_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N23_seed130_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N23_seed84_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N23_seed86_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N23_seed87_done.pickle skipped\n",
@@ -113,6 +106,7 @@
       "/mnt/d//packing/temp/controller_runs/done/ga_N24_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N24_seed88_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N24_seed89_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N25_seed130_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N25_seed84_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N25_seed86_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N25_seed87_done.pickle skipped\n",
@@ -120,6 +114,7 @@
       "/mnt/d//packing/temp/controller_runs/done/ga_N26_seed86_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N26_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N26_seed89_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N27_seed130_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N27_seed84_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N27_seed86_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N27_seed87_done.pickle skipped\n",
@@ -129,6 +124,7 @@
       "/mnt/d//packing/temp/controller_runs/done/ga_N28_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N28_seed88_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N28_seed89_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N29_seed130_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N29_seed84_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N29_seed86_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N29_seed87_done.pickle skipped\n",
@@ -136,6 +132,7 @@
       "/mnt/d//packing/temp/controller_runs/done/ga_N30_seed86_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N30_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N30_seed89_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N31_seed130_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N31_seed84_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N31_seed86_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N31_seed87_done.pickle skipped\n",
@@ -145,6 +142,7 @@
       "/mnt/d//packing/temp/controller_runs/done/ga_N32_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N32_seed88_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N32_seed89_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N33_seed130_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N33_seed84_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N33_seed86_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N33_seed87_done.pickle skipped\n",
@@ -154,6 +152,7 @@
       "/mnt/d//packing/temp/controller_runs/done/ga_N34_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N34_seed89_done.pickle skipped\n",
       "/mnt/d//packing/temp/check_runs/done/ga_N35_seed85_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N35_seed130_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N35_seed84_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N35_seed86_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N35_seed87_done.pickle skipped\n",
@@ -165,6 +164,7 @@
       "/mnt/d//packing/temp/controller_runs/done/ga_N36_seed88_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N36_seed89_done.pickle skipped\n",
       "/mnt/d//packing/temp/check_runs/done/ga_N37_seed85_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N37_seed130_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N37_seed84_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N37_seed86_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N37_seed87_done.pickle skipped\n",
@@ -172,6 +172,7 @@
       "/mnt/d//packing/temp/controller_runs/done/ga_N38_seed86_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N38_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N38_seed89_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N39_seed130_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N39_seed84_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N39_seed86_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N39_seed87_done.pickle skipped\n",
@@ -181,6 +182,7 @@
       "/mnt/d//packing/temp/controller_runs/done/ga_N40_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N40_seed88_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N40_seed89_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N41_seed130_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N41_seed84_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N41_seed86_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N41_seed87_done.pickle skipped\n",
@@ -188,6 +190,7 @@
       "/mnt/d//packing/temp/controller_runs/done/ga_N42_seed86_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N42_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N42_seed89_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N43_seed130_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N43_seed84_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N43_seed86_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N43_seed87_done.pickle skipped\n",
@@ -197,6 +200,7 @@
       "/mnt/d//packing/temp/controller_runs/done/ga_N44_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N44_seed88_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N44_seed89_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N45_seed130_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N45_seed84_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N45_seed86_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N45_seed87_done.pickle skipped\n",
@@ -204,6 +208,7 @@
       "/mnt/d//packing/temp/controller_runs/done/ga_N46_seed86_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N46_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N46_seed89_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N47_seed130_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N47_seed84_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N47_seed86_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N47_seed87_done.pickle skipped\n",
@@ -213,28 +218,36 @@
       "/mnt/d//packing/temp/controller_runs/done/ga_N48_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N48_seed88_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N48_seed89_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N49_seed130_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N49_seed84_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N49_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N50_seed86_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N50_seed87_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N51_seed130_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N51_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N52_seed500_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N52_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N52_seed88_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N53_seed130_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N53_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N54_seed87_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N55_seed130_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N55_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N56_seed500_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N56_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N56_seed88_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N57_seed130_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N57_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N58_seed87_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N59_seed130_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N59_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N60_seed500_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N60_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N60_seed88_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N61_seed130_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N61_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N62_seed87_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N63_seed130_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N63_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N64_seed0_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N64_seed1_done.pickle skipped\n",
@@ -246,6 +259,7 @@
       "/mnt/d//packing/temp/controller_runs/extra/ga_N64_seed1_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/extra/ga_N64_seed2_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/extra/ga_N64_seed3_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N65_seed130_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N65_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N66_seed0_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N66_seed1_done.pickle skipped\n",
@@ -256,6 +270,7 @@
       "/mnt/d//packing/temp/controller_runs/extra/ga_N66_seed1_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/extra/ga_N66_seed2_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/extra/ga_N66_seed3_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N67_seed130_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N67_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N68_seed0_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N68_seed100_done.pickle skipped\n",
@@ -277,6 +292,7 @@
       "/mnt/d//packing/temp/controller_runs/extra/ga_N68_seed503_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/extra/ga_N68_seed504_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/extra/ga_N68_seed507_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N69_seed130_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N69_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N70_seed0_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N70_seed1_done.pickle skipped\n",
@@ -285,14 +301,20 @@
       "/mnt/d//packing/temp/controller_runs/extra/ga_N70_seed0_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/extra/ga_N70_seed1_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/extra/ga_N70_seed2_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N71_seed130_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N71_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N72_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N72_seed88_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N73_seed130_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N73_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N74_seed87_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N75_seed130_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N75_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N76_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N76_seed88_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N77_seed130_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N79_seed130_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N81_seed130_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N83_seed130_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N85_seed130_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N87_seed130_done.pickle skipped\n",
@@ -332,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "17b84dca",
    "metadata": {},
    "outputs": [
@@ -353,9 +375,9 @@
       "62.93588837217167\n",
       "64.08923598265947\n",
       "66.4024636968035\n",
-      "77.2004637887108\n",
+      "72.31114428831317\n",
       "65.4147553839374\n",
-      "73.78045476881452\n",
+      "71.6575307391155\n",
       "70.28757888618124\n",
       "66.06264154686093\n",
       "65.02893977812676\n",
@@ -369,7 +391,7 @@
       "67.8677680462407\n",
       "67.64369832860488\n",
       "71.13312974617264\n",
-      "65.38158535782829\n",
+      "64.40658843990073\n",
       "67.84669362706794\n",
       "66.0681523303225\n",
       "71.57163435412286\n",
@@ -377,11 +399,11 @@
       "72.48261653612744\n",
       "70.30374958682779\n",
       "71.78888186781928\n",
-      "70.4958180711785\n",
+      "69.94677321017333\n",
       "66.72631918653471\n",
       "66.13771543124182\n",
-      "64.55179709069161\n",
-      "66.02179632773772\n",
+      "65.76148530538478\n",
+      "72.88365820804883\n",
       "71.10485206951905\n",
       "72.38684296264536\n",
       "70.84570832163183\n",
@@ -396,17 +418,17 @@
       "71.3192638111491\n",
       "71.77311955696108\n",
       "69.19621684004744\n",
-      "69.68390488324931\n",
+      "68.55935351417278\n",
       "67.10539592135899\n",
       "66.89887478699247\n",
-      "72.6642090003953\n",
-      "70.97226193325928\n",
+      "67.43898707831065\n",
+      "71.48047004842186\n",
       "71.43367457328989\n",
       "71.53016215379665\n",
       "71.38910317868272\n",
       "70.39834082407756\n",
       "71.99338519635934\n",
-      "71.0446014319937\n",
+      "69.66140178276267\n",
       "68.05604625656477\n",
       "68.09639924550275\n",
       "68.84185476295568\n",
@@ -421,21 +443,21 @@
       "69.64054718522321\n",
       "70.77663112754786\n",
       "70.57548382724407\n",
-      "69.37475140981196\n",
-      "73.34041935889778\n",
+      "72.66467253479291\n",
+      "73.4476039365171\n",
       "74.33939614663369\n",
       "71.62992473901573\n",
       "71.66027910886145\n",
-      "70.98112293549346\n",
-      "70.8284474049823\n",
-      "70.93874864268938\n",
+      "71.29671651011121\n",
+      "70.97161736233127\n",
+      "71.36169133970866\n",
       "71.34582865463832\n",
       "71.5061281670541\n",
-      "71.01112549504136\n",
-      "73.77027268944127\n",
+      "71.21908654280419\n",
+      "74.35097317067897\n",
       "68.29403357500355\n",
       "67.10911021718348\n",
-      "73.25535371867774\n"
+      "72.1643684492169\n"
      ]
     }
    ],
@@ -495,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "9e7af746",
    "metadata": {},
    "outputs": [],
