--- a/analysis/standardize_crystal_solutions.ipynb
+++ b/analysis/standardize_crystal_solutions.ipynb
@@ -2,12 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "a927a9d6-cad3-401d-8b9f-6493a2c0848f",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "local\n",
+      "WARNING: CUDA MPS not active\n"
+     ]
+    }
+   ],
    "source": [
     "#%matplotlib widget\n",
     "import sys\n",
@@ -27,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "634a9b80",
    "metadata": {},
    "outputs": [
@@ -89,6 +98,7 @@
       "/mnt/d//packing/temp/controller_runs/done/ga_N20_seed88_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N20_seed89_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N21_seed130_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N21_seed131_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N21_seed84_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N21_seed86_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N21_seed87_done.pickle skipped\n",
@@ -97,6 +107,7 @@
       "/mnt/d//packing/temp/controller_runs/done/ga_N22_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N22_seed89_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N23_seed130_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N23_seed131_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N23_seed84_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N23_seed86_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N23_seed87_done.pickle skipped\n",
@@ -107,6 +118,7 @@
       "/mnt/d//packing/temp/controller_runs/done/ga_N24_seed88_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N24_seed89_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N25_seed130_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N25_seed131_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N25_seed84_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N25_seed86_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N25_seed87_done.pickle skipped\n",
@@ -115,6 +127,7 @@
       "/mnt/d//packing/temp/controller_runs/done/ga_N26_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N26_seed89_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N27_seed130_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N27_seed131_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N27_seed84_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N27_seed86_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N27_seed87_done.pickle skipped\n",
@@ -125,6 +138,7 @@
       "/mnt/d//packing/temp/controller_runs/done/ga_N28_seed88_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N28_seed89_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N29_seed130_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N29_seed131_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N29_seed84_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N29_seed86_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N29_seed87_done.pickle skipped\n",
@@ -133,6 +147,7 @@
       "/mnt/d//packing/temp/controller_runs/done/ga_N30_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N30_seed89_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N31_seed130_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N31_seed131_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N31_seed84_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N31_seed86_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N31_seed87_done.pickle skipped\n",
@@ -143,6 +158,7 @@
       "/mnt/d//packing/temp/controller_runs/done/ga_N32_seed88_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N32_seed89_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N33_seed130_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N33_seed131_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N33_seed84_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N33_seed86_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N33_seed87_done.pickle skipped\n",
@@ -153,6 +169,7 @@
       "/mnt/d//packing/temp/controller_runs/done/ga_N34_seed89_done.pickle skipped\n",
       "/mnt/d//packing/temp/check_runs/done/ga_N35_seed85_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N35_seed130_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N35_seed131_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N35_seed84_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N35_seed86_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N35_seed87_done.pickle skipped\n",
@@ -165,6 +182,7 @@
       "/mnt/d//packing/temp/controller_runs/done/ga_N36_seed89_done.pickle skipped\n",
       "/mnt/d//packing/temp/check_runs/done/ga_N37_seed85_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N37_seed130_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N37_seed131_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N37_seed84_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N37_seed86_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N37_seed87_done.pickle skipped\n",
@@ -173,6 +191,7 @@
       "/mnt/d//packing/temp/controller_runs/done/ga_N38_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N38_seed89_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N39_seed130_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N39_seed131_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N39_seed84_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N39_seed86_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N39_seed87_done.pickle skipped\n",
@@ -183,6 +202,7 @@
       "/mnt/d//packing/temp/controller_runs/done/ga_N40_seed88_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N40_seed89_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N41_seed130_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N41_seed131_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N41_seed84_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N41_seed86_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N41_seed87_done.pickle skipped\n",
@@ -191,6 +211,7 @@
       "/mnt/d//packing/temp/controller_runs/done/ga_N42_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N42_seed89_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N43_seed130_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N43_seed131_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N43_seed84_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N43_seed86_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N43_seed87_done.pickle skipped\n",
@@ -201,6 +222,7 @@
       "/mnt/d//packing/temp/controller_runs/done/ga_N44_seed88_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N44_seed89_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N45_seed130_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N45_seed131_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N45_seed84_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N45_seed86_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N45_seed87_done.pickle skipped\n",
@@ -209,6 +231,7 @@
       "/mnt/d//packing/temp/controller_runs/done/ga_N46_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N46_seed89_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N47_seed130_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N47_seed131_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N47_seed84_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N47_seed86_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N47_seed87_done.pickle skipped\n",
@@ -219,35 +242,43 @@
       "/mnt/d//packing/temp/controller_runs/done/ga_N48_seed88_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N48_seed89_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N49_seed130_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N49_seed131_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N49_seed84_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N49_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N50_seed86_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N50_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N51_seed130_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N51_seed131_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N51_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N52_seed500_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N52_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N52_seed88_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N53_seed130_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N53_seed131_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N53_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N54_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N55_seed130_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N55_seed131_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N55_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N56_seed500_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N56_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N56_seed88_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N57_seed130_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N57_seed131_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N57_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N58_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N59_seed130_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N59_seed131_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N59_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N60_seed500_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N60_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N60_seed88_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N61_seed130_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N61_seed131_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N61_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N62_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N63_seed130_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N63_seed131_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N63_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N64_seed0_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N64_seed1_done.pickle skipped\n",
@@ -260,6 +291,7 @@
       "/mnt/d//packing/temp/controller_runs/extra/ga_N64_seed2_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/extra/ga_N64_seed3_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N65_seed130_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N65_seed131_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N65_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N66_seed0_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N66_seed1_done.pickle skipped\n",
@@ -271,6 +303,7 @@
       "/mnt/d//packing/temp/controller_runs/extra/ga_N66_seed2_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/extra/ga_N66_seed3_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N67_seed130_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N67_seed131_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N67_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N68_seed0_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N68_seed100_done.pickle skipped\n",
@@ -293,6 +326,7 @@
       "/mnt/d//packing/temp/controller_runs/extra/ga_N68_seed504_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/extra/ga_N68_seed507_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N69_seed130_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N69_seed131_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N69_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N70_seed0_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N70_seed1_done.pickle skipped\n",
@@ -302,25 +336,37 @@
       "/mnt/d//packing/temp/controller_runs/extra/ga_N70_seed1_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/extra/ga_N70_seed2_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N71_seed130_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N71_seed131_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N71_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N72_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N72_seed88_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N73_seed130_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N73_seed131_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N73_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N74_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N75_seed130_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N75_seed131_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N75_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N76_seed87_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N76_seed88_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N77_seed130_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N77_seed131_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N79_seed130_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N79_seed131_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N81_seed130_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N81_seed131_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N83_seed130_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N83_seed131_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N85_seed130_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N85_seed131_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N87_seed130_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N87_seed131_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N89_seed130_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N89_seed131_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N91_seed130_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N91_seed131_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N93_seed130_done.pickle skipped\n",
+      "/mnt/d//packing/temp/controller_runs/done/ga_N93_seed131_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N95_seed130_done.pickle skipped\n",
       "/mnt/d//packing/temp/controller_runs/done/ga_N97_seed130_done.pickle skipped\n"
      ]
@@ -354,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "17b84dca",
    "metadata": {},
    "outputs": [
@@ -447,14 +493,14 @@
       "73.4476039365171\n",
       "74.33939614663369\n",
       "71.62992473901573\n",
-      "71.66027910886145\n",
+      "71.27902890759586\n",
       "71.29671651011121\n",
       "70.97161736233127\n",
-      "71.36169133970866\n",
+      "70.5649760350097\n",
       "71.34582865463832\n",
       "71.5061281670541\n",
       "71.21908654280419\n",
-      "74.35097317067897\n",
+      "73.76871400375222\n",
       "68.29403357500355\n",
       "67.10911021718348\n",
       "72.1643684492169\n"
@@ -517,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "9e7af746",
    "metadata": {},
    "outputs": [],
